app/src/main/java/com/example/jokeapp/domain/Errors/NoConnection.kt
package com.example.jokeapp.domain.Errors

class NoConnection : BaseJokeFailure() {
    override fun getMessage(): String {
        TODO("Not yet implemented")
    }
}